# notification_API

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
app/: db.py  exceptions.py  handlers.py  main.py  security.py  settings.py
app/db_services/: notifications.py  users.py
app/dependencies/: auth.py
app/models/: enums.py  notifications.py  users.py
app/rest_models/: users.py
app/routers/: auth.py  notifications.py
app/schemas/: auth.py  notification.py  notifications.py  users.py
app/services/: auth.py  notifications.py  users.py
scripts/: test_integration.sh
tests/: conftest.py  test_auth_integration.py  test_user_services.py
tests/integration/: test_auth_routes.py  test_notification_routes.py
tests/unit/: dummies.py  test_auth_services.py  test_notifications_services.py
